# mood-experiments

./: .gitignore  README.md  env.yml  pyproject.toml  setup.py
mood/: __main__.py  baselines.py  chemistry.py  cli.py  constants.py  criteria.py  dataset.py  distance.py  experiment.py  metrics.py  model_space.py  preprocessing.py  rct.py  representations.py  splitter.py  train.py  transformer.py  utils.py  visualize.py
mood/model/: __init__.py  base.py  coral.py  dann.py  erm.py  ib_erm.py  mixup.py  mtl.py  nn.py  utils.py  vrex.py
notebooks/: 01. Dataset properties.ipynb  01. Relation between model space and input space.ipynb  02. Gap between IID and OOD performance.ipynb  02. Model space vs input space grid.ipynb  03. Correlation between model space and input space.ipynb  03. Prescribed splits with the MOOD protocol.ipynb  04. Performance over distance grid.ipynb  05. Gap between IID and OOD performance.ipynb  06. Split protocol visualization grid.ipynb  07. Prescribed splits summary.ipynb  08. Check RCT proportions.ipynb  09. Analyze RCT results.ipynb  09. Comparing tools and options.ipynb  10. Comparing validation and test performance.ipynb  11. MOOD specification flowchart.ipynb  12. MOOD ToC graphic.ipynb  ToC_graphic.tiff
scripts/: __main__.py  cli.py  compare_performance.py  compare_spaces.py  compare_splits.py  model_vs_input_space.py  performance_over_distance.py  precompute.py  precompute_distances.py  precompute_fps.py  precompute_graphormer.py  precompute_representations.py  visualize_perf_over_distance.py  visualize_shift.py  visualize_splits.py
